--- a/portfolio.html
+++ b/portfolio.html
@@ -195,37 +195,49 @@
 				</address>
 			</div>
 			<div class="social-footer">
-				<h3 class="text-footer-sicial">присоединяйтесь</h3>
+				<h3 class="text-footer-sicial">ПРИСОЕДИНЯЙТЕСЬ</h3>
 				<ul class="social-footer list">
 					<li class="social-item">
-						<a class="social-button-footer" href="#">
-							<svg class="social-icon-footer" Width="20px" Height="20px">
+						<a class="social-button-footer" href="">
+							<svg class="social-icon-footer" Width="20" Height="20">
 								<use href="./images/icons.svg#icon-instagram-2"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-item">
-						<a class="social-button-footer" href="#">
-							<svg class="social-icon-footer" Width="20px" Height="20px">
+						<a class="social-button-footer" href="">
+							<svg class="social-icon-footer" Width="20" Height="20">
 								<use href="./images/icons.svg#icon-twitter-1"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-item">
-						<a class="social-button-footer" href="#">
-							<svg class="social-icon-footer" Width="20px" Height="20px">
+						<a class="social-button-footer" href="">
+							<svg class="social-icon-footer" Width="20" Height="20">
 								<use href="./images/icons.svg#icon-facebook-1"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-item">
-						<a class="social-button-footer" href="#">
-							<svg class="social-icon-footer" Width="20px" Height="20px">
+						<a class="social-button-footer" href="">
+							<svg class="social-icon-footer" Width="20" Height="20">
 								<use href="./images/icons.svg#icon-linkedin-1"></use>
 							</svg>
 						</a>
 					</li>
 				</ul>
+			</div>
+			<div class="follow">
+				<h3 class="text-follow">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
+				<form class="follow-form">
+					<input type="text" class="follow-input" name="E-mail" id="E-mail" placeholder="E-mail">
+					<label for="E-mail"></label>
+					<button class="button follow-button" type="submit">Подписаться
+						<svg class="icon-follow" Width="24" Height="24">
+							<use href="./images/icons.svg#icon-icon-send"></use>
+						</svg>
+					</button>
+				</form>
 			</div>
 		</div>
 	</footer>
