--- a/portfolio.html
+++ b/portfolio.html
@@ -230,7 +230,7 @@
 			<div class="follow">
 				<h3 class="text-follow">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
 				<form class="follow-form">
-					<input type="text" class="follow-input" name="E-mail" id="E-mail" placeholder="E-mail">
+					<input type="email" class="follow-input" name="E-mail" id="E-mail" placeholder="E-mail">
 					<label for="E-mail"></label>
 					<button class="button follow-button" type="submit">Подписаться
 						<svg class="icon-follow" Width="24" Height="24">
