--- a/portfolio.html
+++ b/portfolio.html
@@ -196,7 +196,7 @@
 			</div>
 			<div class="social-footer">
 				<h3 class="text-footer-sicial">ПРИСОЕДИНЯЙТЕСЬ</h3>
-				<ul class="social-footer list">
+				<ul class="social-list list">
 					<li class="social-item">
 						<a class="social-button-footer" href="">
 							<svg class="social-icon-footer" Width="20" Height="20">
